--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,3 @@
 {
-    "files.associations": {
-        "stdexcept": "cpp",
-        "xstring": "cpp",
-        "iostream": "cpp",
-        "iosfwd": "cpp",
-        "sstream": "cpp",
-        "atomic": "cpp",
-        "utility": "cpp",
-        "xtree": "cpp",
-        "xutility": "cpp",
-        "map": "cpp"
-    }
+    "makefile.extensionOutputFolder": "./.vscode"
 }
